fix some cases